--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,10 @@ code {
   left: 0 !important;
   width: 100% !important;
 }
+
+.navbar-position {
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+}
